Cosmetic changes on the list views to make them consistent. Changed the appointment view to add drawableStart

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,7 @@
         app:headerLayout="@layout/nav_bar_header"
         app:itemIconTint="#8c000000"
         app:itemTextColor="#E6000000"
+        android:background="@color/AppBackgroundColor"
         app:menu="@menu/navbar_menu"/>
 
 
