--- a/app/src/main/res/layout/fragment_sale_edit.xml
+++ b/app/src/main/res/layout/fragment_sale_edit.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.evans.ui.EditFragments.SaleEditFragment">
+    tools:context="com.example.evans.ui.EditFragments.SaleEditFragment"
+    android:background="@color/AppBackgroundColor">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
