--- a/app/src/main/res/layout/appointment_adapter.xml
+++ b/app/src/main/res/layout/appointment_adapter.xml
@@ -18,6 +18,8 @@
         android:layout_marginTop="4dp"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="4dp"
+        android:background="@color/cardColor"
+        android:elevation="4dp"
         card_view:layout_constraintBottom_toBottomOf="parent"
         card_view:layout_constraintEnd_toEndOf="parent"
         card_view:layout_constraintStart_toStartOf="parent"
